SERVER-7720 fail on createIndex with a too-long name even if it already exists by another name